--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h1>
         <p id="stats" >
         </p>
-        <button type="button" id="drawMandelbrotButton">Draw</button>
+        <button type="button" id="drawMandelbrotButton">Draw</button> <h1 id="status" style="color: red;">Click Draw to start!</h1>
         
         <ul>
             <li>
@@ -54,6 +54,7 @@
                     margin: 10px;
                     width: 400px; height: 400px;
                     border-width: 1px; border-color: black; border-style: double;
+                    border-radius: 10px;
                     ",
             id="mandelbrotCanvas",
             >
