--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
             <li>
                 <input type="checkbox" id="random" name="random">
-                <label for="random">Random</label>
+                <label for="random">Static</label>
             </li>
             <li>
                 <input type="checkbox" id="doubleResolution" name="doubleResolution">
