--- a/lineIntersectinPlaneSweep.html
+++ b/lineIntersectinPlaneSweep.html
@@ -13,6 +13,7 @@
             Line Intersection
         </h1>
         <button type="button" id="scanButton">Scan</button>
+        <button type="button" id="nextButton" style="visibility: hidden;">next</button>
         <div id="lineCount">Line Count = 0</div>
         <div id="qDiv">Q = (Empty)</div>
         <div id="lDiv">L = (Empty)</div>
