--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                     <input type="color" id="customColorThree" value="#0000ff">
                 </div>
             </li>
+            <li>
+                <input type="checkbox" id="setSpectrum" name="setSpectrum">
+                <label for="setSpectrum">Set 2 Colors</label>
+                <div class="colorPicker" id="spectrumColorPicker">
+                    <input type="color" id="spectrumColorOne" value="#ff0000">
+                    <input type="color" id="spectrumColorTwo" value="#0000ff">
+                </div>
+            </li>
         </menu>
         <h2>Controls</h2>
         <div class="borderedDiv">
