--- a/Life.html
+++ b/Life.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Styles/life.css" >
+    <link rel="stylesheet" href="Styles/life.css">
     <title>Life</title>
     <link rel="icon" href="Media/lifeIcon.png">
 </head>
-<body>
-<h1>Game Of Life</h1>
-    <canvas id="lifeCanvas">
 
-    </canvas>
-<h2>Generation</h2><h3 id="generationNumber" >number</h3>
-<h2>Population</h2><h3 id="populationNumber" >number</h3>
+<body>
+    <div>
+        <h1>Game Of Life</h1>
+        <canvas id="lifeCanvas">
+        </canvas>
+    </div>
+    <div class="numberDiv">
+
+        <h2>Generation</h2>
+        <h3 id="generationNumber">number</h3>
+    </div>
+    <div class="numberDiv">
+
+        <h2>Population</h2>
+        <h3 id="populationNumber">number</h3>
+    </div>
     <script src="Scripts/life.js"></script>
 </body>
+
 </html>
