Created links to the websites

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body id="body" >
-
+        <h3 class="boardedDiv"><a href="Life.html">Life link</a></h3>
         <h1 class="borderedDiv">
             Mandelbrot
         </h1>
