--- a/Life.html
+++ b/Life.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h3 class="boardedDiv"><a href="index.html">Mandelbrot link</a></h3>
     <div>
         <h1>Game Of Life</h1>
         <canvas id="lifeCanvas">
