--- a/Life.html
+++ b/Life.html
@@ -14,7 +14,7 @@
     <h3 class="boardedDiv"><a href="index.html">Mandelbrot link</a></h3>
     <div>
         <h1>Game Of Life</h1>
-        <canvas id="lifeCanvas">
+        <canvas id="lifeCanvas" width="500" height="500">
         </canvas>
     </div>
     <div class="numberDiv">
