added a peak population and reformated

--- a/Life.html
+++ b/Life.html
@@ -26,6 +26,8 @@
 
         <h2>Population</h2>
         <h3 id="populationNumber">number</h3>
+        <h2>Peak Pop</h2>
+        <h3 id="PeakPopulation">number</h3>
     </div>
     <script src="Scripts/life.js"></script>
 </body>
