--- a/Life.html
+++ b/Life.html
@@ -14,7 +14,7 @@
     <h3 class="boardedDiv"><a href="index.html">Mandelbrot link</a></h3>
     <div>
         <h1>Game Of Life</h1>
-        <canvas class="lifeCanvas" id="lifeCanvas" width="500" height="500">
+        <canvas class="lifeCanvas" id="lifeCanvas" width="100" height="100">
         </canvas>
     </div>
     <div class="numberDiv">
@@ -28,6 +28,8 @@
         <h3 id="populationNumber">number</h3>
         <h2>Peak Pop</h2>
         <h3 id="PeakPopulation">number</h3>
+        <h2>Average Pop</h2>
+        <h3 id="AveragePopulation">number</h3>
     </div>
     <script src="Scripts/life.js"></script>
 </body>
