--- a/Life.html
+++ b/Life.html
@@ -21,15 +21,19 @@
 
         <h2>Generation</h2>
         <h3 id="generationNumber">number</h3>
-    </div>
-    <div class="numberDiv">
-
         <h2>Population</h2>
         <h3 id="populationNumber">number</h3>
         <h2>Peak Pop</h2>
         <h3 id="PeakPopulation">number</h3>
         <h2>Average Pop</h2>
         <h3 id="AveragePopulation">number</h3>
+
+    </div>
+    <div class="numberDiv">
+
+
+        <h2>Boost Events</h2>
+        <p id="boostEventList">None Yet</p>
     </div>
     <script src="Scripts/life.js"></script>
 </body>
