Added oldest Cell stat, Changes formating of stats

--- a/Life.html
+++ b/Life.html
@@ -20,13 +20,15 @@
     <div class="numberDiv">
 
         <h2>Generation</h2>
-        <h3 id="generationNumber">number</h3>
+        <p id="generationNumber">number</p>
         <h2>Population</h2>
-        <h3 id="populationNumber">number</h3>
+        <p id="populationNumber">number</p>
         <h2>Peak Pop</h2>
-        <h3 id="PeakPopulation">number</h3>
+        <p id="PeakPopulation">number</p>
         <h2>Average Pop</h2>
-        <h3 id="AveragePopulation">number</h3>
+        <p id="AveragePopulation">number</p>
+        <h2>Oldest Cell</h2>
+        <p id="oldestCell">number = (x, y)</p>
 
     </div>
     <div class="numberDiv">
