--- a/Life.html
+++ b/Life.html
@@ -19,23 +19,24 @@
     </div>
     <div class="numberDiv">
 
-        <h2>Generation</h2>
+        <h2>Stats</h2>
+        <h3>Generation</h3>
         <p id="generationNumber">number</p>
-        <h2>Population</h2>
+        <h3>Population</h3>
         <p id="populationNumber">number</p>
-        <h2>Peak Pop</h2>
+        <h3>Peak Pop</h3>
         <p id="PeakPopulation">number</p>
-        <h2>Average Pop</h2>
+        <h3>Average Pop</h3>
         <p id="AveragePopulation">number</p>
-        <h2>Oldest Cell</h2>
+        <h3>Oldest Cell</h3>
         <p id="oldestCell">number = (x, y)</p>
 
     </div>
     <div class="numberDiv">
 
 
-        <h2>Boost Events</h2>
-        <p id="boostEventList">None Yet</p>
+        <h3>Boost Events</h2>
+            <p id="boostEventList">None Yet</p>
     </div>
     <script src="Scripts/life.js"></script>
 </body>
