--- a/Pixelator.html
+++ b/Pixelator.html
@@ -79,6 +79,38 @@
         id="averageColorCanvas"
         ,
       >
+      </canvas>
+      <canvas
+        style="
+          position: relative;
+          margin: 10px;
+          width: 40px;
+          height: 40px;
+          border-width: 1px;
+          border-color: black;
+          border-style: double;
+          border-radius: 10px;
+        "
+        ,
+        id="colorCompCanvas"
+        ,
+      >
+      </canvas>
+      <canvas
+        style="
+          position: relative;
+          margin: 10px;
+          width: 40px;
+          height: 40px;
+          border-width: 1px;
+          border-color: black;
+          border-style: double;
+          border-radius: 10px;
+        "
+        ,
+        id="compMidCanvas"
+        ,
+      >
       </canvas
       ><canvas
         style="
